# -next-rocket

./: README.md
api/: Cargo.toml  Rocket.toml
api/migrations/2023-04-24-064718_create_tasks/: up.sql
api/src/: lib.rs  main.rs  models.rs  schema.rs
api/src/routes/: index.rs
web/: package.json  pnpm-lock.yaml
web/src/components/create/: TaskCreateForm.tsx
web/src/components/tasks/: TaskRenderer.tsx  TasksController.tsx  TasksRenderer.tsx
web/src/pages/: index.tsx
web/src/types/: Task.ts
