[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
anyhow = "1.0.70"
serde = { version = "1.0.160", features = ["derive"] }
rocket_cors = "0.6.0-alpha2"
